Add Tibeb Guess project files