@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 **Tibeb Guess – Ethiopian Proverbs Game 🎉**
 
 Tibeb Guess is an interactive OOP-based game to learn Ethiopian proverbs through images. Players don’t type answers — after a 30-second timer, the correct proverb appears automatically, and scores/hearts are updated.
@@ -60,3 +61,171 @@ Fun, educational, image-based guessing game
 Automatic scoring and heart tracking
 
 Simple UI promoting teamwork and cultural learning
+=======
+# Tibeb Guess - Proverb Guessing Game
+
+A Java/JavaFX desktop application that displays images representing proverbs and automatically reveals the text after 30 seconds.
+
+## Features
+
+- **Display Proverb Images**: Shows a single image representing a proverb in the main UI
+- **30-Second Timer**: Countdown timer for each round
+- **Automatic Reveal**: Automatically displays the correct proverb text after 30 seconds
+- **Scoring System**: Tracks and displays player score
+- **Hearts/Lives System**: Starts with 3 hearts, loses 1 for each wrong round
+- **Game Loop**: Sequential rounds until game over
+- **Final Results Screen**: Shows final score and session summary
+- **Preloaded Proverbs**: 15-30 proverbs with associated images
+- **Amharic Support**: UI supports Amharic text display
+
+## Requirements
+
+- Java 11 or higher
+- JavaFX 17 or higher
+- Maven 3.6+ (for building)
+
+## Project Structure
+
+```
+Tibeb-Guess/
+├── src/
+│   ├── main/
+│   │   ├── java/
+│   │   │   └── com/
+│   │   │       └── tibebguess/
+│   │   │           ├── Proverb.java
+│   │   │           ├── GameManager.java
+│   │   │           ├── GameController.java
+│   │   │           └── TibebGuessApp.java
+│   │   └── resources/
+│   │       ├── styles.css
+│   │       └── images/
+│   │           └── (proverb images)
+├── pom.xml
+└── README.md
+```
+
+## Setup Instructions
+
+### 1. Install Dependencies
+
+Make sure you have Java 11+ and Maven installed.
+
+### 2. Add Proverb Images
+
+1. Create the images directory:
+   ```
+   src/main/resources/images/
+   ```
+
+2. Add your proverb images (15-30 images) using the same filenames referenced in `src/main/resources/proverbs.txt`, e.g.:
+   - `proverb_builder.jpg` (ሰብራም ቤት አይባርም)
+   - `proverb_lion_web.jpg` (ድር በቅቤ እንኳ አይቀላቀልም)
+   - `proverb_cattle_child.jpg` (እድል እንስሳ ከቦታ አይቆይም)
+   - Additional placeholders such as `proverb1.jpg`, `proverb2.jpg`, ...
+
+### 3. Update Proverb Data
+
+Edit `src/main/resources/proverbs.txt` (or create your own CSV-like file) to:
+- Add/remove proverb lines using the format `proverb text|/images/filename.jpg`
+- Make sure each line references an actual image inside `src/main/resources/images/`
+
+### 4. Build the Project
+
+```bash
+mvn clean compile
+```
+
+### 5. Run the Application
+
+**Option 1: Using Maven**
+```bash
+mvn javafx:run
+```
+
+**Option 2: Using Java directly**
+```bash
+# First, compile
+mvn clean package
+
+# Then run (adjust JavaFX module path as needed)
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -cp target/classes com.tibebguess.TibebGuessApp
+```
+
+## Class Structure
+
+### Proverb Class
+- **Purpose**: Data container for proverb text and image path
+- **Attributes**: `text`, `imagePath`
+- **Methods**: `getText()`, `getImagePath()`
+
+### AbstractGameManager Class
+- **Purpose**: Encapsulates the reusable game loop (abstraction) and exposes template hooks
+- **Highlights**: Timer lifecycle, scoring, lives, answer reveal, polymorphic callbacks
+
+### GameManager Class
+- **Purpose**: Concrete implementation that connects the abstract hooks to the JavaFX controller
+- **Highlights**: Overrides `onRoundStarted`, `onTimerUpdated`, `onProverbRevealed`, `onAnswerEvaluated`, etc.
+
+### GameController Class
+- **Purpose**: UI management and presentation (start screen, playable screen, result screen)
+- **Key Methods**: `showProverbImage()`, `revealAnswer()`, `showFeedback()`, `resetRoundUI()`, `showFinalResult()`
+
+## Non-Functional Requirements
+
+- ✅ **Performance**: UI responds within 200ms
+- ✅ **Resource Usage**: Optimized for <200MB RAM
+- ✅ **Start-up Time**: Loads in ≤5 seconds
+- ✅ **Reliability**: Graceful error handling for missing images
+- ✅ **Usability**: Large, readable text with Amharic support
+- ✅ **Maintainability**: Modular OOP design with clear separation of concerns
+- ✅ **Portability**: Standard Java/JavaFX, runs on Windows
+
+## Customization
+
+### Adding More Proverbs
+
+Edit the `loadProverbs()` method in `TibebGuessApp.java`:
+
+```java
+proverbs.add(new Proverb("Your proverb text here", "/images/your-image.jpg"));
+```
+
+### Changing Timer Duration
+
+Edit the `ROUND_TIME_SECONDS` constant in `GameManager.java`:
+
+```java
+private static final int ROUND_TIME_SECONDS = 30; // Change to desired seconds
+```
+
+### Changing Initial Hearts
+
+Edit the `INITIAL_HEARTS` constant in `GameManager.java`:
+
+```java
+private static final int INITIAL_HEARTS = 3; // Change to desired number
+```
+
+## Troubleshooting
+
+### Images Not Loading
+- Ensure images are in `src/main/resources/images/`
+- Check image paths in `loadProverbs()` match actual filenames
+- Verify image file formats are supported (JPG, PNG)
+
+### JavaFX Not Found
+- Ensure JavaFX is properly installed
+- Check `pom.xml` for correct JavaFX version
+- For Java 11+, you may need to add JavaFX modules manually
+
+## License
+
+This project is provided as-is for educational purposes.
+
+## Author
+
+Created based on UML class diagram and functional requirements specification.
+
+
+>>>>>>> 3ea4a96 (Tibeb Guess)
